--- a/_posts/2021-04-02-t1.md
+++ b/_posts/2021-04-02-t1.md
@@ -187,7 +187,7 @@ private static Map<String, List<String>> loadSpringFactories(@Nullable ClassLoad
 
 看上面的代码大概就知道，Spring会去扫描加载`META-INF/spring.factories`文件，还不了解spring.factories文件的同学，可能还是很懵逼，我在这里贴一张图：
 
-![factories](https://aries-cy.github.io/assets/note_img/spring_factories.jpg)
+![factories](https://aries-cy.github.io/assets/note_img/spring_factories.png)
 
 该图对比上面的代码，黄色部分就是`Map<String, List<String>>`的Key，而绿色的代码就是map的value。这些value都是类的全路径。
 
