--- a/_posts/2021-04-16-t1.md
+++ b/_posts/2021-04-16-t1.md
@@ -1,6 +1,6 @@
 ---
 title: @Import引入ImportBeanDefinitionRegistrar，实现自己的Mybatis
-categories: [spring_resource]
+categories: [spring]
 comments: true
 ---
 
