--- a/_posts/2021-03-25-t1.md
+++ b/_posts/2021-03-25-t1.md
@@ -1,6 +1,6 @@
 ---
 title: @Import在SpringBoot自动装配技术中的应用
-categories: [spring源码]
+categories: [spring]
 comments: true
 ---
 
@@ -30,9 +30,8 @@ public interface ImportSelector {
 
 }
 ```
-
-- 参数：AnnotationMetadata，注解信息，这里可以拿到被@Import标注的所有的注解信息
-- 返回值：String[]，返回一个字符串数组，String需要是类的全路径名
+参数：AnnotationMetadata，注解信息，这里可以拿到被@Import标注的所有的注解信息
+返回值：String[]，返回一个字符串数组，String需要是类的全路径名
 
 这个接口到底有什么用呢？来看看spring中的ConfigurationClassPostProcessor是怎么处理的？
 
@@ -66,11 +65,11 @@ if (candidate.isAssignable(ImportSelector.class)) {
 }
 ```
 
-- 首先去拿到ImportSelector中方法返回的字符串数组（类全路径名）；
+首先去拿到ImportSelector中方法返回的字符串数组（类全路径名）；
 
-- 然后通过类的全路径名，以反射的方式返回SourceClass：
+然后通过类的全路径名，以反射的方式返回SourceClass：
 
-- ```java
+```java
   SourceClass asSourceClass(@Nullable String className) throws IOException {
      if (className == null) {
         return new SourceClass(Object.class);
@@ -88,7 +87,7 @@ if (candidate.isAssignable(ImportSelector.class)) {
   }
   ```
 
-- 最后就会将接口返回的类全路径数组，生成对应的beanDefinition，在后续的过程中实例化bean，放到spring容器中。
+最后就会将接口返回的类全路径数组，生成对应的beanDefinition，在后续的过程中实例化bean，放到spring容器中。
 
 ### 3.@Import在SpringBoot自动装配技术中的应用
 
@@ -185,6 +184,10 @@ private static Map<String, List<String>> loadSpringFactories(@Nullable ClassLoad
 
 `public static final String FACTORIES_RESOURCE_LOCATION = "META-INF/spring.factories";`
 
-看上面的代码大概就知道，Spring会去扫描加载`META-INF/spring.factories`文件
+看上面的代码大概就知道，Spring会去扫描加载`META-INF/spring.factories`文件，还不了解spring.factories文件的同学，可能还是很懵逼，我在这里贴一张图：
+
+![factories](https://aries-cy.github.io/assets/note_img/spring_factories.png)
+
+该图对比上面的代码，黄色部分就是`Map<String, List<String>>`的Key，而绿色的代码就是map的value。这些value都是类的全路径。
 
 这些类的全路径都会被扫描出来，通过ImportSelector接口的selectImports方法返回，然后被Spring以反射的方式生成beanDefinition，再后续的bean实例化过程中实例化出来，然后放到Spring容器中。
