--- a/_posts/2021-04-13-t2.md
+++ b/_posts/2021-04-13-t2.md
@@ -1,5 +1,5 @@
 ---
-title: Import引入ImportBeanDefinitionRegistrar，实现自己的Mybatis
+title: 用ImportBeanDefinitionRegistrar实现自己的Mybatis
 categories: [spring源码]
 comments: true
 ---
