--- a/_posts/2020-04-05-线程池.md
+++ b/_posts/2020-04-05-线程池.md
@@ -62,10 +62,209 @@ public ThreadPoolExecutor(int corePoolSize,
 
 ##### 线程池执行任务的流程
 ---
-* 如果当前运行的线程少于corePoolSize，则创建新线程来执行任务（注意，执行这一步骤 需要获取全局锁）
-* 如果运行的线程等于或多于corePoolSize，则将任务加入BlockingQueue
-* 如果无法将任务加入BlockingQueue（队列已满，且没有达到最大线程数），则创建新的线程来处理任务（注意，执 行这一步骤需要获取全局锁）
-* 如果创建新线程将使当前运行的线程超出maximumPoolSize，任务将被拒绝，并调用 RejectedExecutionHandler.rejectedExecution()方法
+* execute
+```java
+public void execute(Runnable command) {
+    if (command == null)
+        throw new NullPointerException();
+    int c = ctl.get();
+    // 当前线程数量小于corePoolSize，直接创建线程
+    if (workerCountOf(c) < corePoolSize) {
+        if (addWorker(command, true))
+            return;
+        c = ctl.get();
+    }
+    // 这里corePoolSize就满了，就需要排队了，根据队列的类型来决定是否入队成功
+    if (isRunning(c) && workQueue.offer(command)) {
+        // 入队成功了，再次检查下线程池是否还在运行中，如果没有在运行了，从队列里移除，直接走一下reject
+        int recheck = ctl.get();
+        if (! isRunning(recheck) && remove(command))
+            reject(command);
+        else if (workerCountOf(recheck) == 0)
+            addWorker(null, false);
+    }
+    // 如果队列也满了，那就再次创建额外的线程，达到maximumPoolSize的数量，第二个参数的true和false就是表示创建的是core线程还是非core线程
+    else if (!addWorker(command, false))
+        reject(command);
+}
+```
+
+* 创建线程并执行
+```java
+private boolean addWorker(Runnable firstTask, boolean core) {
+    retry:
+    for (;;) {
+        int c = ctl.get();
+        int rs = runStateOf(c);
+
+        // Check if queue empty only if necessary.
+        if (rs >= SHUTDOWN &&
+            ! (rs == SHUTDOWN &&
+               firstTask == null &&
+               ! workQueue.isEmpty()))
+            return false;
+
+        for (;;) {
+            int wc = workerCountOf(c);
+            if (wc >= CAPACITY ||
+                wc >= (core ? corePoolSize : maximumPoolSize))
+                return false;
+            // 这里，就要创建线程了，利用cas将线程数量+1，这里成功了以后，才会走后面的逻辑，去真正的创建线程
+            if (compareAndIncrementWorkerCount(c))
+                break retry;
+            c = ctl.get();  // Re-read ctl
+            if (runStateOf(c) != rs)
+                continue retry;
+            // else CAS failed due to workerCount change; retry inner loop
+        }
+    }
+
+    boolean workerStarted = false;
+    boolean workerAdded = false;
+    Worker w = null;
+    try {
+        // Worker是AQS的子类
+        w = new Worker(firstTask);
+        // 这个t，就是新创建的线程
+        final Thread t = w.thread;
+        if (t != null) {
+            final ReentrantLock mainLock = this.mainLock;
+            mainLock.lock();
+            try {
+                // Recheck while holding lock.
+                // Back out on ThreadFactory failure or if
+                // shut down before lock acquired.
+                int rs = runStateOf(ctl.get());
+
+                if (rs < SHUTDOWN ||
+                    (rs == SHUTDOWN && firstTask == null)) {
+                    if (t.isAlive()) // precheck that t is startable
+                        throw new IllegalThreadStateException();
+                    // 创建线程的过程，是加锁的，所有的线程都维护在workers这个set里
+                    // 只有一个线程能修改这个数据
+                    workers.add(w);
+                    int s = workers.size();
+                    if (s > largestPoolSize)
+                        largestPoolSize = s;
+                    workerAdded = true;
+                }
+            } finally {
+                mainLock.unlock();
+            }
+            if (workerAdded) {
+                // 启动刚才创建的线程
+                t.start();
+                workerStarted = true;
+            }
+        }
+    } finally {
+        if (! workerStarted)
+            addWorkerFailed(w);
+    }
+    return workerStarted;
+}
+```
+
+线程启动了，就该执行提交到线程池的任务了:
+```java
+final void runWorker(Worker w) {
+    Thread wt = Thread.currentThread();
+    Runnable task = w.firstTask;
+    w.firstTask = null;
+    w.unlock(); // allow interrupts
+    boolean completedAbruptly = true;
+    try {
+        // 这个getTask，就是从队列里获取
+        while (task != null || (task = getTask()) != null) {
+            // Worker继承自AQS，所以自带加锁能力
+            w.lock();
+            // If pool is stopping, ensure thread is interrupted;
+            // if not, ensure thread is not interrupted.  This
+            // requires a recheck in second case to deal with
+            // shutdownNow race while clearing interrupt
+            if ((runStateAtLeast(ctl.get(), STOP) ||
+                 (Thread.interrupted() &&
+                  runStateAtLeast(ctl.get(), STOP))) &&
+                !wt.isInterrupted())
+                wt.interrupt();
+            try {
+                beforeExecute(wt, task);
+                Throwable thrown = null;
+                try {
+                    // 执行提交的任务
+                    task.run();
+                } catch (RuntimeException x) {
+                    thrown = x; throw x;
+                } catch (Error x) {
+                    thrown = x; throw x;
+                } catch (Throwable x) {
+                    thrown = x; throw new Error(x);
+                } finally {
+                    afterExecute(task, thrown);
+                }
+            } finally {
+                task = null;
+                // 因为有锁，所以线程安全
+                w.completedTasks++;
+                // 解锁
+                w.unlock();
+            }
+        }
+        completedAbruptly = false;
+    } finally {
+        processWorkerExit(w, completedAbruptly);
+    }
+}
+```
+##### 从队列中拉取任务
+```java
+private Runnable getTask() {
+    boolean timedOut = false; // Did the last poll() time out?
+
+    for (;;) {
+        int c = ctl.get();
+        int rs = runStateOf(c);
+
+        // Check if queue empty only if necessary.
+        if (rs >= SHUTDOWN && (rs >= STOP || workQueue.isEmpty())) {
+            decrementWorkerCount();
+            return null;
+        }
+
+        int wc = workerCountOf(c);
+
+        // Are workers subject to culling?
+        // 这是很关键的一个参数，allowCoreThreadTimeOut，表示是否允许线程在指定时间后销毁
+        // 然后查看当前线程数量是不是大于corePoolSize
+        boolean timed = allowCoreThreadTimeOut || wc > corePoolSize;
+        if ((wc > maximumPoolSize || (timed && timedOut))
+            && (wc > 1 || workQueue.isEmpty())) {
+            if (compareAndDecrementWorkerCount(c))
+                return null;
+            continue;
+        }
+
+        try {
+            // 如果允许超时的话，就调用poll，并等待一段时间，否则就调用take，一直阻塞
+            // 在fixed线程中，是走take方法
+            Runnable r = timed ?
+                workQueue.poll(keepAliveTime, TimeUnit.NANOSECONDS) :
+                workQueue.take();
+            if (r != null)
+                return r;
+            timedOut = true;
+        } catch (InterruptedException retry) {
+            timedOut = false;
+        }
+    }
+}
+```
+
+* 总结：
+    * 如果当前运行的线程少于corePoolSize，则创建新线程来执行任务（注意，执行这一步骤 需要获取全局锁）
+    * 如果运行的线程等于或多于corePoolSize，则将任务加入BlockingQueue
+    * 如果无法将任务加入BlockingQueue（队列已满，且没有达到最大线程数），则创建新的线程来处理任务（注意，执 行这一步骤需要获取全局锁）
+    * 如果创建新线程将使当前运行的线程超出maximumPoolSize，任务将被拒绝，并调用 RejectedExecutionHandler.rejectedExecution()方法
 
 ##### 合理的使用线程池
 ---
