--- a/_posts/2020-09-01-mysql.md
+++ b/_posts/2020-09-01-mysql.md
@@ -4,21 +4,101 @@ categories: [datasource]
 comments: true
 ---
 
-1.mysql的架构图，每个组件的作用
+### mysql中的组件及其作用
+mysql是我们常用的关系型数据库，学习mysql，首先要去了解它的整体架构，使用了哪些组件，这些组价都有什么作用。
+以下是mysql的架构图：
+
+![](https://aries-cy.github.io/assets/note_img/mysql.png)
+
+* 1.Connectors
+    * Connectors是mysql向外提供的交互组件，我们使用的开发语言可以通过该组件来操作sql语句，实现与sql的交互
+
+* 2.Management Service & Utilities
+    * 管理服务组件和工具组件，提供对mysql的集成管理，如备份、恢复、安全管理
+
+* 3.Connection Pool
+    * 连接池组件：负责监听对客户向mysql端的请求，接收请求、转发请求到目标模块。每个成功的连接都会被分配一个线程，负责与mysql的通信。
+ 
+* 4.SQL Interface
+    * sql接口组件：接收客户端的sql命令，并将最终结果返回给客户端。
+
+* 5.Parser
+    * 查询分析器：分析sql语句的合法性。
+
+* 6.Optimizer
+    * 优化器：对SQL命令按照标准流程进行优化分析。
+
+* 7.Caches & Buffers ： 缓存、缓冲组件
+
+* 8.存储引擎：主要有MYISAM和InnoDB
+
+* 9.File System：物理文件
 
 2.mysql中一条sql的执行流程（最好是update）
+### sql的执行流程
+![](https://aries-cy.github.io/assets/note_img/sql.png)
 
-3.事务；事务什么时候失效；事务相关问题
+### 事务
+#### 事务的隔离级别
+1.读未提交
+2.读已提交
+3.可重复读
+4.串行化
 
-4.事务的传播机制、隔离级别、mvcc
+#### mvcc
 
+### spring中的声明式事务
+#### 实现原理
+#### 事务什么时候失效
 5.mysql的四大特性
 
 6.存储引擎
 
 7.索引、索引的数据结构；建立、优化、使用索引
 
-8.sql执行计划（explain）
+### sql执行计划
+#### 准备工作
+首先创建了两个简单的表：
+```bash
+CREATE TABLE `user`  (
+  `id` int(0) NOT NULL AUTO_INCREMENT,
+  `name` varchar(255) NULL,
+  `sex` varchar(1) NULL,
+  `age` int(11) NULL,
+  PRIMARY KEY (`id`)
+);
+CREATE TABLE `address`  (
+  `id` int(0) NOT NULL,
+  `user_id` int(0) NULL,
+  `address` varchar(255) NULL,
+  PRIMARY KEY (`id`)
+)
+```
+
+然后往表中插入数据：
+```bash
+INSERT INTO `user`(`id`, `name`, `sex`, `age`) VALUES (1, 'xx', '女', 27);
+INSERT INTO `address`(`id`, `user_id`, `address`) VALUES (1, 1, '中国-重庆');
+```
+
+#### explain之type
+```bash
+EXPLAIN SELECT * FROM `user`;
+```
+我们知道sql的执行计划中，有一个type字段，代表了sql使用索引的情况，主要包含以下类型：
+* 1.system：整张表只有一行数据，且存储引擎为MyISAM
+    * 当存储引擎为InnoDB时，explain中的type字段为：ALL，即全表扫描
+    * 执行这条sql语句将存储引擎改为MyISAM：`alter table `user` ENGINE = MyISAM;`
+    * 再次查看上面的sql语句的执行计划，其中的type字段已经变成了 `system`
+
+* 2.const：表中最多只有一行数据匹配，sql使用了主键或者唯一索引
+    * 将存储引擎改到InnoDB：`alter table `user` ENGINE = INNODB;`
+    * 执行 `EXPLAIN SELECT * FROM `user` where id = 1;`
+    * 由于id是主键，所以看到type字段为 `const`
+
+* 3.eq_ref：每次与之前的表合并都在该表读取一行，特点是使用=，而且索引的所有部分都参与join且索引是主键或非空唯一键的索引
+    * 
+    
 
 9.mysql中的锁
 
