--- a/_posts/2022-02-17-docker.md
+++ b/_posts/2022-02-17-docker.md
@@ -23,3 +23,45 @@ sudo yum install docker-ce
 Docker version 20.10.12, build e91ed57
 ```
 
+### 使用docker安装mysql
+首先下载mysql镜像:
+```bash
+docker pull mysql
+```
+
+然后用以下命令运行mysql容器:
+```bash
+docker run -itd --name mysql -p 3306:3306 -e MYSQL_ROOT_PASSWORD=root mysql
+```
+* 参数说明：
+    * -p 3306:3306 ：映射容器服务的 3306 端口到宿主机的 3306 端口，外部主机可以直接通过 宿主机ip:3306 访问到 MySQL 的服务。
+    * MYSQL_ROOT_PASSWORD=root：设置 MySQL 服务 root 用户的密码。
+
+如果要使用Navicat连接mysql，还需要进行以下步骤：
+
+1.使用命令进入mysql容器：
+```bash
+docker exec -it mysql bash
+```
+
+2.连接mysql并输入密码：
+```bash
+mysql -u root -p
+```
+
+3.修改加密规则：
+```bash
+ALTER USER 'root'@'%' IDENTIFIED BY 'root' PASSWORD EXPIRE NEVER;
+```
+
+4.更新root用户密码：
+```bash
+ALTER USER 'root'@'%' IDENTIFIED WITH mysql_native_password BY 'root';
+```
+
+5.刷新权限：
+```bash
+flush privileges;
+```
+
+然后就可以使用Navicat连接mysql了。
