--- a/_posts/2020-09-01-mysql.md
+++ b/_posts/2020-09-01-mysql.md
@@ -97,7 +97,7 @@ EXPLAIN SELECT * FROM `user`;
     * 由于id是主键，所以看到type字段为 `const`
 
 * 3.eq_ref：每次与之前的表合并都在该表读取一行，特点是使用=，而且索引的所有部分都参与join且索引是主键或非空唯一键的索引
-    * 
+    * EXPLAIN SELECT `user`.`name`,address.address FROM `user`,address WHERE `user`.id = address.user_id 
     
 
 9.mysql中的锁
